# forest_cover_prediction

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  FRONTEND_BACKEND_STATUS.md  ORGANIZATION_COMPLETE.md  ORGANIZATION_SUMMARY.md  PROJECT_SCORECARD.md  PROJECT_SUMMARY.md  README.md  README_10_OUT_OF_10.md  UPGRADE_TO_10.md  config.py  deploy_system.py  docker-compose.yml  drift_detection.py  fastapi_main.py  fastapi_main_enhanced.py  final_test.py  pyproject.toml  requirements.txt  start_server.py  test_api.py  test_improved_pipeline.py  test_pipeline.py  test_prediction.py  test_preprocessing.py  test_system.py  train_models.py
.github/workflows/: ci-cd.yml
config/: init_db.sql  nginx.conf  prometheus.yml  pytest.ini
docs/: API_DOCUMENTATION.md  BUG_FIXES_SUMMARY.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  EXPLAINABILITY_UPGRADE.md  FINAL_10_SUMMARY.md  NOTEBOOK_UPDATE_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PROJECT_SCORECARD.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_V2.md  README_V3_FULL_10.md  UPGRADE_SUMMARY.md
frontend/: index.html
frontend/static/: script.js  style.css
k8s/: deployment.yaml  ingress.yaml  storage.yaml
models/: best_model_lightgbm.pkl
notebooks/: 01_data_exploration.ipynb  README.md  complete_forest_cover_analysis.ipynb
scripts/: create_presentation.py  focused_optimization.py  optimize_for_99.py  quick_analysis.py  quick_optimization.py  start.py
src/: chatgpt_predictor.py  data_preprocessing.py  data_validation.py  ensemble_models.py  explainability.py  mlflow_integration.py  neural_networks.py
terraform/: main.tf
tests/: test_api.py  test_explainability.py  test_integration.py  test_models.py  test_performance.py  test_preprocessing.py
